--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,26 @@
 	</parent>
 	<groupId>com.octo.ecom</groupId>
 
-	<artifactId>dakibot-api</artifactId>
+	<artifactId>expenses-api</artifactId>
 	<version>0.0.1-UNSTABLE</version>
-	<name>dakibot-api</name>
-	<description>DAKIBOT API</description>
+	<name>expenses-api</name>
+	<description>EXPENSES API</description>
 
 
 	<properties>
 		<java.version>1.8</java.version>
+		<org.jacoco.agent.version>0.8.5</org.jacoco.agent.version>
+		<sonar.jacoco.reportPath>${user.dir}/target/jacoco.exec</sonar.jacoco.reportPath>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.agent</artifactId>
+			<classifier>runtime</classifier>
+			<version>${org.jacoco.agent.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -95,8 +104,14 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
+				<configuration>
+					<systemPropertyVariables>
+						<jacoco-agent.destfile>${sonar.jacoco.reportPath}</jacoco-agent.destfile>
+					</systemPropertyVariables>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -105,6 +120,26 @@
 					<source>8</source>
 					<target>8</target>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${org.jacoco.agent.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
